<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Vladimir Golyshev</string>
    <string name="status_online">В Сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_phone">+79111111111</string>
    <string name="settings_change_phone_number">Нажмите,Чтобы Изменить Номер</string>
    <string name="settings_default_login">sousnein</string>
    <string name="settings_bio">О себе</string>
    <string name="settings_label_change_nick">Нажмите,чтобы изменить ник</string>
    <string name="settings_label_bio">Добавьте информацию о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выйти</string>
    <string name="register_text_enter_code">Введите код из СМС</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом на ваш телефон</string>
    <string name="register_hint_degfault_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_updated">Данные обновлены</string>
    <string name="settings_hint_input_username">Ваш никнэйм</string>
    <string name="toast_error">Ошибка</string>
    <string name="toast_unpu_username_is_empty">Поле Пустое</string>
    <string name="toast_username_already_exist">Пользователь уже существует</string>
    <string name="settings_change_bio_label">Введите ник латиницей от 3 до 9 символов</string>
</resources>